# world2pixel

./: .gitignore  CHANGELOG.md  README.md
world2pixel/: CMakeLists.txt
world2pixel/source/: latlonfunctions.cpp  latlonfunctions.h  main.cpp  mainheader.h  mapqueryfunctions.cpp  mapqueryfunctions.h  renderfunctions.cpp  renderfunctions.h  xmlcheckpixelclass.h
